# zvc-gui

./: .gitignore  Cargo.toml  README.md  old_model.rs
src/: .fft.rs.swp  audio.rs  exec_providers.rs  fft.rs  main.rs  model.rs  wave_file.rs
